Trying to fix gaps in nav bar

--- a/style1Copy.css
+++ b/style1Copy.css
@@ -77,6 +77,7 @@ tr, td{
     margin-right: auto;
     text-align: center;
     display: table;
+    background-color:yellow;
 }
 
 .nav a {
